fixing welcome message on mobile view

--- a/Magento_Theme/web/css/source/_module.less
+++ b/Magento_Theme/web/css/source/_module.less
@@ -546,6 +546,9 @@ aside.modal-popup.quickview-modal-popup.modal-slide._show{
     top: 50%;
   }
   }
+  li.greet.welcome{
+	visibility: hidden;
+  }
   .footer-content-customised .page-main{
     width: 96%;
   }
